--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rabbitspring
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=update
+spring.data.jdbc.dialect=postgresql
