builld: rabbitmq service and config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
+  rabbit:
+    image: rabbitmq:4-management
+    container_name: rabbitmq-udemy
+    ports:
+      - "5672:5672"
+      - "15672:15672"
