--- a/notificacao-ms/pom.xml
+++ b/notificacao-ms/pom.xml
@@ -50,6 +50,17 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.2</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sns</artifactId>
+            <version>2.32.26</version>
+        </dependency>
 	</dependencies>
 
 	<build>
