--- a/notificacao-ms/src/main/resources/application.properties
+++ b/notificacao-ms/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+rabbitmq.queue.proposta.pendente=proposta-pendente.ms-notificacao
+
+aws.accessKey=${AWS_ACCESSKEY}
+aws.secretKey=${AWS_SECRETKEY}
