--- a/ms-analise-credito/src/main/resources/application.properties
+++ b/ms-analise-credito/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=analise-credito
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+rabbitmq.queue.proposta.pendente=proposta-pendente.ms-analisar-credito
