--- a/ms-analise-credito/pom.xml
+++ b/ms-analise-credito/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
