--- a/ms-analise-credito/src/main/resources/application.properties
+++ b/ms-analise-credito/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.queue.proposta.pendente=proposta-pendente.ms-analisar-credito
+rabbitmq.queue.proposta.concluida=proposta-concluida.ms-proposta
+rabbitmq.queue.proposta.concluida=proposta-concluida.ms-notifcacao
+rabbitmq.exchange.proposta.pendente=proposta-concluida.ex
