--- a/ms-notificacao/src/main/resources/application.properties.example
+++ b/ms-notificacao/src/main/resources/application.properties.example
@@ -6,6 +6,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.queue.proposta.pendente=proposta-pendente.ms-notificacao
+rabbitmq.queue.proposta.concluida=proposta-concluida.ms-notificacao
 
 aws.accessKey=${AWS_ACCESSKEY}
 aws.secretKey=${AWS_SECRETKEY}
